--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -41,7 +41,7 @@
         <!-- Левая панель -->
         <div class="col-2 p-0 mt-3">
             <div class="nav flex-column nav-pills">
-                <a class="nav-link" href="/admin">Admin</a>
+                <a class="nav-link" href="/admin" th:if="${user.roles.?[name == 'ROLE_ADMIN'].size() > 0}">Admin</a>
                 <a class="nav-link active" href="/user">User</a>
             </div>
         </div>
