--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -55,7 +55,7 @@
         <!-- Левая панель -->
         <div class="col-2 p-0 mt-3">
             <div class="nav flex-column nav-pills">
-                <a class="nav-link active" href="/admin">Admin</a>
+                <a class="nav-link active" href="/admin" th:if="${user.roles.?[name == 'ROLE_ADMIN'].size() > 0}">Admin</a>
                 <a class="nav-link" href="/user">User</a>
             </div>
         </div>
@@ -154,7 +154,7 @@
                                                             
                                                             <div class="mb-3">
                                                                 <label th:for="${'password' + user.id}" class="form-label fw-bold">Password</label>
-                                                                <input type="password" class="form-control" name="password" th:id="${'password' + user.id}"/>
+                                                                <input type="password" class="form-control" th:field="*{password}" th:id="${'password' + user.id}"/>
                                                             </div>
                                                             
                                                             <div class="mb-3">
